# rag_model

./: .env  README.md  main.py  pyproject.toml  sandbox.py
src/fastapi/: main.py
src/model/: __main__.py  main.py
src/pinecone/: __main__.py  main.py
src/rag_app/pages/: 1_File_Manager.py
src/streamlit/: app.py
src/streamlit/pages/: 1_File_Manager.py
tests/: pinecone_import_test.py
